--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <canvas id="canvas1" autofocus></canvas>
 
+    <img id="player" src="./assets/player.png" alt="" />
+
     <img id="layer1" src="./assets/layer1.png" />
     <img id="layer2" src="./assets/layer2.png" />
     <img id="layer3" src="./assets/layer3.png" />
